[package]
name = "untitled-cache-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.3"  # for shared byte slices
dashmap = "5.4"  # for shared hashmaps
docopt = "1.1"  # for commandline argument parsing
http-body-util = "0.1.0-rc.2"  # for handling response body
hyper = { version = "1.0.0-rc.2", features = ["http1", "server"] }  # for HTTP handling
reqwest = "0.11"
rustls = "0.20"  # for TLS handling
tokio = { version = "1.24", features= ["rt-multi-thread", "net", "macros", "sync", "fs", "io-util"]}  # async runtime
thiserror = "1.0"  # for pretty error types :)
serde = { version = "1.0", features = ["derive"] }  # for deserializing commandline arguments